Fix of a typo of an envelope in the denominator.

--- a/phaseevo.tex
+++ b/phaseevo.tex
@@ -601,8 +601,8 @@ $$
               \over{{\big(u^{\mp}_{3a}/u^{\mp}_3(0)\big)}}},
     &\eqsubdef{eq:ph60c}\cr
     D_{\pm}&=\Big({{\zeta_{\pm}}\over{L}}\Big)
-            {{(u^{\mp}_{3c}-u^{\mp}_{3a})^{1/2}}
-              \over{{u^{\mp}_3(0)}}},
+            \bigg({{u^{\mp}_{3c}-u^{\mp}_{3a}}
+              \over{{u^{\mp}_3(0)}}}\bigg)^{1/2},
     &\eqsubdef{eq:ph60d}\cr
   }
 $$
